Trying to find an elegant way to convert a raw instruction to an Instruction Enum for easy development. Have a solution in place that requires some external packages

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,6 @@ authors = ["Ryan Lindsey <ryan.lindsey44@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+num = "0.2"
+num-traits = "0.2"
+num-derive = "0.2"
